color contrast issue fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -121,6 +121,6 @@ footer {
 }
 
 #lastModified {
-    color: rgb(247, 247, 176);
+    color: rgb(5, 5, 5);
     margin-top: 0.5rem;
 }
